syntax = "proto3";

package raftrpc;

option java_package = "protobuf";
option java_outer_classname = "KvStorageProto";

service KvStorage {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bool ok = 1;
    string value = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    bool ok = 1;
}